--- a/app/assets/stylesheets/admin/tests.scss
+++ b/app/assets/stylesheets/admin/tests.scss
@@ -301,3 +301,13 @@
     }
   }
 }
+
+.admin-test-create {
+  .page-header {
+    margin-left: 15px;
+  }
+
+  .form-container {
+    margin: 0 15px 0 15px;
+  }
+}
