--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="navbar navbar-fixed-top navbar-inverse">
+<header class="navbar navbar-fixed-top navbar-container">
   <div class="container">
     <%= link_to t("navbar.brand_name"), root_path, id: "logo" %>
     <nav>
