--- a/app/views/user/words/_table.html.erb
+++ b/app/views/user/words/_table.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-8">
-    <div class="page-header">
+    <div class="word-page-header">
       <h2><i class="fa fa-book"></i> <%= t(".title") %></h2>
     </div>
   </div>
