--- a/app/assets/stylesheets/_courses.scss
+++ b/app/assets/stylesheets/_courses.scss
@@ -192,3 +192,17 @@
     margin: 0 5px;
   }
 }
+
+.course-page-header {
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 2rem;
+    margin-top: 50px;
+
+    h2 {
+      color: #337ab7;
+      font-size: 2.5rem;
+      padding-left: 20px
+    }
+  }
