--- a/app/assets/stylesheets/_filter.scss
+++ b/app/assets/stylesheets/_filter.scss
@@ -1,5 +1,9 @@
-.filter-container {
-  margin-top: 30px;
+.word-filter-container {
+  margin-top: 35px;
+}
+
+.course-filter-container {
+  margin-top: 45px;
 }
 
 .filter-header {
