--- a/app/assets/stylesheets/_words.scss
+++ b/app/assets/stylesheets/_words.scss
@@ -167,12 +167,25 @@
 }
 
 .words-count {
-  margin-top: 75px;
+  margin-top: 50px;
 }
 
 .word-badge {
   font-size: 11px;
 }
+
+.word-page-header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+  margin-top: 30px;
+
+    h2 {
+      color: #337ab7;
+      font-size: 2.5rem;
+    }
+  }
 
 /* Responsive Design */
 @media (max-width: 768px) {
