--- a/app/views/user/words/index.html.erb
+++ b/app/views/user/words/index.html.erb
@@ -6,7 +6,7 @@
 <% end %>
 <div class="container-fluid">
   <div class="row words-container">
-    <div class="col-md-3 col-sm-12 filter-sidebar">
+    <div class="col-md-3 col-sm-12 word-filter-container filter-sidebar">
       <%= render "filter" %>
     </div>
 
