91454/Fix_error_message

--- a/app/assets/stylesheets/lesson.css
+++ b/app/assets/stylesheets/lesson.css
@@ -1,4 +1,8 @@
 /* app/assets/stylesheets/lessons.scss */
+.lesson-form-container{
+  margin: 50px 20px;
+}
+
 .word-list-section, .test-list-section, .paragraph-list-section {
   margin-top: 20px;
 }
