--- a/app/views/admin/questions/edit.html.erb
+++ b/app/views/admin/questions/edit.html.erb
@@ -7,21 +7,11 @@
   <span class="breadcrumb-separator"> > </span>
   <span><%= t(".title") %></span>
 <% end %>
+<%= render "shared/error_messages", object: @question %>
 <div class="question-form-container">
   <div class="question-form-header">
     <h1 class="question-form-title"><%= t(".title") %></h1>
   </div>
-
-  <% if @question.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@question.errors.count, t(".explanation"), count: @question.errors.count) %></h2>
-      <ul>
-        <% @question.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
 
   <%= render "form", test: @test, question: @question %>
 </div>
