--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -16,6 +16,40 @@
         <%= link_to t(".back_to_list"), admin_tests_path, class: "btn btn-outline-primary" %>
       </div>
     </div>
+    <div class="test-details-table">
+      <div class="table-responsive">
+        <table class="table">
+          <tbody>
+            <tr>
+              <td class="detail-label"><%= t(".test_name") %></td>
+              <td class="detail-value"><%= @test.name %></td>
+            </tr>
+            <tr>
+              <td class="detail-label"><%= t(".description") %></td>
+              <td class="detail-value"><%= @test.description %></td>
+            </tr>
+            <tr>
+              <td class="detail-label"><%= t(".duration_label") %></td>
+              <td class="detail-value"><%= @test.duration %> <%= t(".minutes") %></td>
+            </tr>
+            <tr>
+              <td class="detail-label"><%= t(".max_attempts_label") %></td>
+              <td class="detail-value"><%= @test.max_attempts %></td>
+            </tr>
+            <tr>
+              <td class="detail-label"><%= t(".created_date") %></td>
+              <td class="detail-value"><%= @test.created_at.strftime(Settings.course.date_format) %></td>
+            </tr>
+            <tr>
+              <td class="detail-label"><%= t(".questions_count") %></td>
+              <td class="detail-value">
+                <span class="count-badge"><%= @test.questions.count %></span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
   </div>
 
   <div class="questions-section">
