--- a/app/views/guest/homepage.html.erb
+++ b/app/views/guest/homepage.html.erb
@@ -10,7 +10,7 @@
     <% if logged_in? %>
       <%= link_to t(".hero_cta"), user_courses_path, class: "btn btn-primary btn-lg" %>
     <% else %>
-      <%= link_to t(".hero_cta"), signup_path, class: "btn btn-primary btn-lg" %>
+      <%= link_to t(".hero_cta"), new_user_registration_path, class: "btn btn-primary btn-lg" %>
     <% end %>
   </div>
 </section>
