--- a/app/views/devise/registrations/_form.html.erb
+++ b/app/views/devise/registrations/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @user, url: @user.new_record? ? signup_path : user_path(@user)do |f| %>
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "shared/error_messages", object: f.object %>
   <%= f.label :name %>
   <%= f.text_field :name, class: "form-control" %>
