--- a/app/views/guest/homepage.html.erb
+++ b/app/views/guest/homepage.html.erb
@@ -7,7 +7,7 @@
   <div class="container hero-content">
     <h1><%= t(".hero_title") %></h1>
     <p><%= t(".hero_subtitle") %></p>
-    <% if logged_in? %>
+    <% if user_signed_in? %>
       <%= link_to t(".hero_cta"), user_courses_path, class: "btn btn-primary btn-lg" %>
     <% else %>
       <%= link_to t(".hero_cta"), new_user_registration_path, class: "btn btn-primary btn-lg" %>
